<resources>
    <string name="app_name">Popular-Movies</string>
    <string name="header_title_label">Title</string>
    <string name="header_synopsis_label">Synopsis</string>
    <string name="header_release_date_label">Release date</string>
    <string name="header_user_rating_label">User rating</string>
    <string name="poster_content_description">Poster of the movie</string>
    <string name="background_content_description">Picture of the movie</string>
    <string name="header_trailer_label">Trailers</string>
    <string name="trailer_label">Trailer</string>
    <string name="btn_watch_trailer">Watch</string>
    <string name="review_by">Reviewed by</string>


    <string name="most_popular">Most Popular</string>
    <string name="highest_rating">Highest Rating</string>
    <string name="favorites">Favorites</string>

    <string-array name="sort_order_array">
        <item>@string/most_popular</item>
        <item>@string/highest_rating</item>
        <item>@string/favorites</item>
    </string-array>

</resources>
